--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -30,6 +30,7 @@ fr:
         navbar:
           feature: "Concept"
           download: "Télécharger"
+          download1: "Concours"
           hopen_box: "Fonctionnalités"
           sign_in: "Connecter"
           sign_up: "Enregistrer"
@@ -47,6 +48,9 @@ fr:
     description_3: "salut 3"
 ###################################
   download:
+    title1: "Jouez avec nous !"
+    title_under1: "jkjkdjd"
+    title_under2: "kddkjkd"
     title: "Télécharger l'application"
     title_under: "Notre application est disponible sur l'ensemble de vos terminaux ! Téléchargez-la maintenant et commencez l'aventure"
 ###################################
@@ -164,3 +168,23 @@ Parce que l’image d’une personne est une donnée à caractère personnel,
     description_11: "Hopen Family se préoccupe de la sécurité et du respect de la vie privée de ses utilisateurs, en particulier des enfants. Pour cette raison, les parents souhaitant autoriser l'accès de leurs enfants aux services proposés par Hopen Family doivent les aider à configurer leur compte, surveiller leur accès aux services et déterminer, en tant que représentants légaux, les services et les contenus qu'ils jugent adaptés pour eux. En autorisant leur enfant à accéder à ces services, les parents reconnaissent et acceptent que ces services puissent inclure des services de messagerie électronique, de communauté et de réseaux sociaux."
     title_10: "Législation applicable et juridiction compétente"
     description_12: "Ces Conditions Générales seront régies et interprétées selon les lois françaises. Hopen Family décide de soumettre tout différent concernant l'accès, l'utilisation et/ou la souscription de services à travers du Site Web, aux tribunaux français sauf au cas où la loi stipulerait autre chose."
+###################################
+  contest:
+    title: "WE ARE COMING SOON !"
+    title_under: "Before we launch Hopen Family, play with us
+      and win your Hopen for free."
+    title_under1: "Family is one of the most important things in our lives."
+    title_under2: "Share with us your amazing family moments and enjoy Christmas time"
+    title_under3: "to send us beautiful pictures."
+    title2: "OUR CONTEST !"
+    title2_under: "Free game contest, The 2 winners will be selected by the Hopen Team."
+    element1: "Take the best selfie
+    you would send to your
+    grandparents"
+    element2: "Share it on www.facebook.co m/hopenfamily"
+    element3: "Get the maximum of Likes to win our first Hopen"
+    dead_line: "DEADLINE : 30th of JANUARY 2017"
+    footer_title: "PRICE : HOPEN"
+    p: "Plug your Hopen to any devise and your grandparents
+      will receive instantly pictures of you"
+##########################################
