Add new style from pages_contest version3

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,8 +49,8 @@ en:
 ###################################
   download:
     title1: "Play with us!"
-    title_under1: "Before we launch Hopen Family, play with us.
-      and win your Hopen for free."
+    title_under1: "Before we launch Hopen Family, be part of the early adopters
+      to win your Hopen for free."
     title_under2: "Register to know more about it."
     title: "Download our App"
     title_under: "Our app is available on any mobile device! Download now to get started!"
@@ -186,7 +186,7 @@ Parce que l’image d’une personne est une donnée à caractère personnel,
     Hopen Family webpage : "
     element3: "Get the maximum of Love to win your first Hopen"
     dead_line: "DEADLINE : 30th of JANUARY 2017"
-    footer_title: "AWARD : HOPEN"
-    p: "Plug your Hopen to any device and your grandparents
-      will receive instantly pictures of you and your relatives via the Hopen Family App."
+    footer_title: "YOUR AWARD : HOPEN"
+    p: "Be unique, plug your Hopen to any device and your grandparents
+      will instantly receive pictures of you and your relatives via the Hopen Family App."
 ##########################################
